unify cmake test command

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -14,7 +14,7 @@ add_subdirectory(catch2)
 # * WORKING_DIRECTORY: the working directory for the test, defaults to CMAKE_BINARY_DIR/bin
 function(neofoam_unit_test TEST)
   set(options "")
-  set(oneValueKeywords "COMMAND" "WORKING_DIRECTORY")
+  set(oneValueKeywords "MPI_SIZE" "COMMAND" "WORKING_DIRECTORY")
   set(multiValueKeywords "")
   cmake_parse_arguments("neofoam" "${options}" "${oneValueKeywords}" "${multiValueKeywords}"
                         ${ARGN})
@@ -27,9 +27,14 @@ function(neofoam_unit_test TEST)
 
   add_executable(${neofoam_COMMAND} "${TEST}.cpp")
   set_target_properties(${neofoam_COMMAND} PROPERTIES OUTPUT_NAME ${TEST})
-  target_link_libraries(
-    ${neofoam_COMMAND} PRIVATE neofoam_catch_main neofoam_warnings neofoam_options Kokkos::kokkos
-                               NeoFOAM cpptrace::cpptrace)
+  target_link_libraries(${neofoam_COMMAND} PRIVATE neofoam_warnings neofoam_options Kokkos::kokkos
+                                                   NeoFOAM cpptrace::cpptrace)
+  if(NOT neofoam_MPI_SIZE)
+    target_link_libraries(${neofoam_COMMAND} PRIVATE neofoam_catch_main)
+
+  else()
+    target_link_libraries(${neofoam_COMMAND} PRIVATE neofoam_catch_main_mpi)
+  endif()
 
   if(NEOFOAM_WITH_SUNDIALS)
     target_link_libraries(${neofoam_COMMAND} PRIVATE SUNDIALS::arkode)
@@ -45,51 +50,23 @@ function(neofoam_unit_test TEST)
                                                         ${neofoam_WORKING_DIRECTORY})
   endif()
 
-  add_test(
-    NAME ${TEST}
-    COMMAND ${neofoam_COMMAND}
-    WORKING_DIRECTORY ${neofoam_WORKING_DIRECTORY})
-endfunction()
-
-function(neofoam_unit_test_mpi TEST)
-  set(options "")
-  set(oneValueKeywords "MPI_SIZE" "COMMAND" "WORKING_DIRECTORY")
-  set(multiValueKeywords "")
-  cmake_parse_arguments("neofoam" "${options}" "${oneValueKeywords}" "${multiValueKeywords}"
-                        ${ARGN})
-  if(NOT DEFINED "neofoam_MPI_SIZE")
-    set(neofoam_MPI_SIZE 1)
-  endif()
-  if(NOT DEFINED "neofoam_WORKING_DIRECTORY")
-    set(neofoam_WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/tests)
-  endif()
-  if(NOT DEFINED "neofoam_COMMAND")
-    set(neofoam_COMMAND ${TEST})
-  endif()
-
-  add_executable(${TEST} "${TEST}.cpp")
-  target_link_libraries(${TEST} PRIVATE neofoam_catch_main_mpi neofoam_warnings neofoam_options
-                                        Kokkos::kokkos NeoFOAM cpptrace::cpptrace)
-  if(WIN32)
-    set_target_properties(
-      ${TEST}
-      PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${neofoam_WORKING_DIRECTORY}/$<0:>
-                 LIBRARY_OUTPUT_DIRECTORY ${neofoam_WORKING_DIRECTORY}/$<0:>
-                 ARCHIVE_OUTPUT_DIRECTORY ${neofoam_WORKING_DIRECTORY}/$<0:>)
+  if(NOT neofoam_MPI_SIZE)
+    add_test(
+      NAME ${TEST}
+      COMMAND ${neofoam_COMMAND}
+      WORKING_DIRECTORY ${neofoam_WORKING_DIRECTORY})
   else()
-    set_target_properties(${TEST} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${neofoam_WORKING_DIRECTORY})
-  endif()
-
-  add_test(
-    NAME ${TEST}
-    COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${neofoam_MPI_SIZE} ${neofoam_COMMAND}
-    WORKING_DIRECTORY ${neofoam_WORKING_DIRECTORY})
-  set_tests_properties(${TEST} PROPERTIES TIMEOUT 10)
-  set_tests_properties(${TEST} PROPERTIES PROCESSORS ${neofoam_MPI_SIZE})
-  if(${MPIEXEC_MAX_NUMPROCS} LESS neofoam_MPI_SIZE)
-    message(WARNING "Test <${TEST}> requested <${neofoam_MPI_SIZE}> processors, "
-                    "but only <${numberOfProcessors}> are available. Disabling test " "<${TEST}>")
-    set_tests_properties(${TEST} PROPERTIES DISABLED TRUE)
+    add_test(
+      NAME ${TEST}
+      COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${neofoam_MPI_SIZE} ${neofoam_COMMAND}
+      WORKING_DIRECTORY ${neofoam_WORKING_DIRECTORY})
+    set_tests_properties(${TEST} PROPERTIES TIMEOUT 10)
+    set_tests_properties(${TEST} PROPERTIES PROCESSORS ${neofoam_MPI_SIZE})
+    if(${MPIEXEC_MAX_NUMPROCS} LESS neofoam_MPI_SIZE)
+      message(WARNING "Test <${TEST}> requested <${neofoam_MPI_SIZE}> processors, "
+                      "but only <${numberOfProcessors}> are available. Disabling test " "<${TEST}>")
+      set_tests_properties(${TEST} PROPERTIES DISABLED TRUE)
+    endif()
   endif()
 endfunction()
 
