--- a/test/mesh/unstructured/CMakeLists.txt
+++ b/test/mesh/unstructured/CMakeLists.txt
@@ -2,7 +2,7 @@
 # SPDX-FileCopyrightText: 2023-2024 NeoFOAM authors
 
 if(NEOFOAM_ENABLE_MPI_SUPPORT)
-  neofoam_unit_test_mpi(communicator MPI_SIZE 3)
+  neofoam_unit_test(communicator MPI_SIZE 3)
 endif()
 
 neofoam_unit_test(unstructuredMesh)
