--- a/.github/workflows/build_on_aws.yaml
+++ b/.github/workflows/build_on_aws.yaml
@@ -139,7 +139,7 @@ jobs:
         preset: ["develop", "production"]
     steps:
       - name: Prepare environment
-        shell: bash -i {0}
+        shell: bash {0}
         run: |
           sudo rm /actions-runner/externals/node20/bin/node
           sudo ln -s /root/spack/opt/spack/linux-centos7-x86_64_v3/gcc-10.5.0/node-js*/bin/node /actions-runner/externals/node20/bin/node
@@ -152,7 +152,7 @@ jobs:
           path: build
           key: aws_PR_${{ github.event.pull_request.number }}_${{matrix.preset}}_${{matrix.instance.ec2-type}}
       - name: Build NeoFOAM
-        shell: bash -i {0}
+        shell: bash {0}
         run: |
           . /root/spack/share/spack/setup-env.sh
           spack load cmake@3.30.5
@@ -168,7 +168,7 @@ jobs:
             -DNEOFOAM_ENABLE_MPI_WITH_THREAD_SUPPORT=OFF
           cmake --build --preset ${{matrix.preset}}
       - name: Test NeoFOAM
-        shell: bash -i {0}
+        shell: bash {0}
         run: |
           . /root/spack/share/spack/setup-env.sh
           module load gnu/11
@@ -185,7 +185,7 @@ jobs:
         instance: ${{ fromJson(needs.aggregate-labels.outputs.matrix) }}
     steps:
       - name: Build NeoFOAM
-        shell: bash -i {0}
+        shell: bash {0}
         run: |
           . /root/spack/share/spack/setup-env.sh
           module load clang/17
