--- a/.github/workflows/build_on_macos.yaml
+++ b/.github/workflows/build_on_macos.yaml
@@ -7,7 +7,9 @@ on:
       - dev
       - main
   pull_request:
-    types: synchronize
+    types:
+      - synchronize
+      - opened
   schedule:
     - cron: "* 0 * * 0"
 
