--- a/.github/workflows/build_on_windows.yaml
+++ b/.github/workflows/build_on_windows.yaml
@@ -6,7 +6,9 @@ on:
       - dev
       - main
   pull_request:
-    types: synchronize
+    types:
+      - synchronize
+      - opened
   schedule:
     - cron: "* 0 * * 0"
 
