included petsc configuration if one whants to compile with clang --> since petsc and also NeoFoam are dependent on kokkos both need to use the same kokkos version. find_packaged propagats cmake variable and dependencies to the caller cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,7 +48,7 @@ option(NEOFOAM_ENABLE_CPP_CHECK "Enable cpp check static analyzer" OFF)
 option(NEOFOAM_ENABLE_CLANG_TIDY "Enable clang tidy static analyzer" OFF)
 option(NEOFOAM_ENABLE_PCH "Enable precompiled header" OFF)
 option(NEOFOAM_ENABLE_IWYU "Enable iwyu checks" OFF)
-option(NEOFOAM_ENABLE_MPI "Enable MPI" ON)
+option(NEOFOAM_ENABLE_MPI "Enable MPI" OFF)
 option(NEOFOAM_ENABLE_MPI_WITH_THREAD_SUPPORT "Enable MPI with threading support" OFF)
 option(NEOFOAM_ENABLE_WARNINGS "Treat compiler warnings as errors" OFF)
 mark_as_advanced(NEOFOAM_ENABLE_WARNINGS)
