--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -114,6 +114,5 @@ add_subdirectory(linearAlgebra)
 add_subdirectory(mesh)
 # add_subdirectory(timeIntegration)
 if(NEOFOAM_WITH_PETSC)
-  add_subdirectory(petsc)
-  add_subdirectory(matrixPetsc)
+  # add_subdirectory(petsc) add_subdirectory(matrixPetsc)
 endif()
