check if workflows with fewer threads

--- a/.github/workflows/static_checks.yaml
+++ b/.github/workflows/static_checks.yaml
@@ -46,7 +46,7 @@ jobs:
           -DNEOFOAM_ENABLE_IWYU=ON \
           -DGINKGO_BUILD_OMP=OFF \
           -DGINKGO_BUILD_MPI=OFF
-        cmake --build --preset develop
+        cmake --build --preset develop -j 2
     - uses: actions/upload-artifact@v4
       with:
         name: build-artifact
