disable half for iwyu build

--- a/.github/workflows/static_checks.yaml
+++ b/.github/workflows/static_checks.yaml
@@ -45,6 +45,7 @@ jobs:
           -DNEOFOAM_ENABLE_MPI_WITH_THREAD_SUPPORT=OFF \
           -DNEOFOAM_ENABLE_IWYU=ON \
           -DGINKGO_BUILD_OMP=OFF \
+          -DGINKGO_ENABLE_HALF=OFF \
           -DGINKGO_BUILD_MPI=OFF
         cmake --build --preset develop -j 2
     - uses: actions/upload-artifact@v4
