--- a/.github/workflows/build_adapter.yaml
+++ b/.github/workflows/build_adapter.yaml
@@ -89,6 +89,7 @@ jobs:
          CXX=${{matrix.compiler.CXX}} \
          cmake --preset develop \
            -DNEOFOAM_DEVEL_TOOLS=OFF \
+           -DNEOFOAM_BUILD_TESTS=OFF \
            -DNEOFOAM_ENABLE_MPI_WITH_THREAD_SUPPORT=OFF
          cmake --build  --preset develop
 
