--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -35,7 +35,7 @@ function(neofoam_unit_test TEST)
     target_link_libraries(${neofoam_COMMAND} PRIVATE SUNDIALS::arkode)
   endif()
 
-  target_include_directories(${neofoam_COMMAND} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/test/catch2")
+  target_include_directories(${neofoam_COMMAND} PRIVATE "${CMAKE_SOURCE_DIR}/test/catch2")
 
   if(NEOFOAM_WITH_SUNDIALS)
     target_link_libraries(${neofoam_COMMAND} PRIVATE SUNDIALS::arkode)
