wip try clang 18 for static checks

--- a/.github/workflows/static_checks.yaml
+++ b/.github/workflows/static_checks.yaml
@@ -23,6 +23,7 @@ jobs:
         sudo apt update
         sudo apt install \
            ninja-build \
+           python3.10 \
            iwyu \
            clang-18 \
            libomp-18-dev \
