--- a/.github/workflows/static_checks.yaml
+++ b/.github/workflows/static_checks.yaml
@@ -29,6 +29,7 @@ jobs:
            ninja-build \
            iwyu \
            clang-18 \
+           libpython3.10 \
            libomp-18-dev \
            libopenmpi-dev \
            openmpi-bin
