wip try clang 18 for static checks

--- a/.github/workflows/static_checks.yaml
+++ b/.github/workflows/static_checks.yaml
@@ -25,6 +25,7 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt update
+        sudo apt upgrade
         sudo apt install \
            ninja-build \
            iwyu \
