wip try clang 18 for static checks

--- a/.github/workflows/static_checks.yaml
+++ b/.github/workflows/static_checks.yaml
@@ -14,7 +14,7 @@ jobs:
 
     - name: Add clang repo
       run: |
-        sudo add-apt-repository 'deb http://apt.llvm.org/jammy/ llvm-toolchain-jammy-19 main'
+        sudo add-apt-repository 'deb http://apt.llvm.org/noble/ llvm-toolchain-noble-19 main'
         wget https://apt.llvm.org/llvm-snapshot.gpg.key
         sudo apt-key add llvm-snapshot.gpg.key
 
@@ -25,7 +25,6 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt update
-        sudo apt upgrade
         sudo apt install \
            ninja-build \
            iwyu \
@@ -66,7 +65,7 @@ jobs:
 
     - name: Add clang repo
       run: |
-        sudo add-apt-repository 'deb http://apt.llvm.org/jammy/ llvm-toolchain-jammy-19 main'
+        sudo add-apt-repository 'deb http://apt.llvm.org/noble/ llvm-toolchain-noble-19 main'
         wget https://apt.llvm.org/llvm-snapshot.gpg.key
         sudo apt-key add llvm-snapshot.gpg.key
 
