--- a/.github/workflows/static_checks.yaml
+++ b/.github/workflows/static_checks.yaml
@@ -42,6 +42,8 @@ jobs:
 
     - name: Create Compilation Database
       run: |
+        CC=clang \
+        CXX=clang++ \
         cmake --preset develop \
           -DNEOFOAM_DEVEL_TOOLS=OFF \
           -DCMAKE_CXX_COMPILER=clang++-18 \
