working serial petsc solver with foamAdaptor also on GPU

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -38,8 +38,8 @@ function(neofoam_unit_test TEST)
   if(NEOFOAM_WITH_PETSC)
     message("Hallo")
     message("${PETSc_LIBRARIES}")
-    target_link_libraries(${TEST} PRIVATE ${PETSc_LIBRARIES}
-                                          ${PETSc_LIBRARY_DIRS}/libkokkoscore.so.4.4 mpi)
+    target_link_libraries(${TEST} PRIVATE ${PETSc_LIBRARIES} ${PETSc_LIBRARY_DIRS}/libkokkoscore.so
+                                          mpi)
     target_include_directories(${TEST} PRIVATE ${PETSc_INCLUDE_DIRS})
     target_link_directories(${TEST} PRIVATE ${PETSc_LIBRARY_DIRS})
     link_directories(${PETSc_LIBRARY_DIRS})
