--- a/.github/workflows/build_on_aws.yaml
+++ b/.github/workflows/build_on_aws.yaml
@@ -27,9 +27,9 @@ jobs:
       fail-fast: false
       matrix:
         instance:
-          - TYPE: g5.2xlarge
-            AMI: ami-053248e1ad04b8278
-            index: 0
+          #- TYPE: g5.2xlarge
+          #  AMI: ami-053248e1ad04b8278
+          #  index: 0
           #- TYPE: g4ad.xlarge AMD GPU V520 currently not supported by cmake
           #  AMI: ami-0f8c4824f9f2e449e
           #  index: 0
