--- a/.github/workflows/build_on_aws.yaml
+++ b/.github/workflows/build_on_aws.yaml
@@ -168,7 +168,7 @@ jobs:
             -DNEOFOAM_ENABLE_MPI_WITH_THREAD_SUPPORT=OFF
           cmake --build --preset ${{matrix.preset}}
       - name: Test NeoFOAM
-        shell: bash {0}
+        shell: bash -i {0}
         run: |
           . /root/spack/share/spack/setup-env.sh
           module load gnu/11
