--- a/test/finiteVolume/CMakeLists.txt
+++ b/test/finiteVolume/CMakeLists.txt
@@ -7,3 +7,4 @@ add_subdirectory(cellCentred/interpolation)
 add_subdirectory(cellCentred/faceNormalGradient)
 add_subdirectory(cellCentred/operator)
 add_subdirectory(cellCentred/auxiliary)
+add_subdirectory(cellCentred/linearAlgebra)
