auto generate NeoFOAM.hpp

--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -28,3 +28,14 @@ endif()
 if(${CMAKE_BUILD_TYPE} MATCHES RelWithDebInfo)
   target_compile_definitions(NeoFOAM_public_api INTERFACE NF_DEBUG_INFO)
 endif()
+
+# Get list of some *.hpp files in folder include
+file(GLOB_RECURSE include_files *.hpp)
+
+# Convert the list of files into #includes
+foreach(include_file ${include_files})
+  set(include_statements "${include_statements}#include \"${include_file}\"\n")
+endforeach()
+
+configure_file(${CMAKE_CURRENT_LIST_DIR}/NeoFOAM/NeoFOAM.hpp.in
+               ${CMAKE_CURRENT_BINARY_DIR}/NeoFOAM/NeoFOAM.hpp)
