--- a/.github/workflows/static_checks.yaml
+++ b/.github/workflows/static_checks.yaml
@@ -46,6 +46,7 @@ jobs:
         CXX=clang++ \
         cmake --preset develop \
           -DNEOFOAM_DEVEL_TOOLS=OFF \
+          -DNEOFOAM_WITH_GINKGO=OFF \
           -DCMAKE_CXX_COMPILER=clang++-18 \
           -DCMAKE_EXPORT_COMPILE_COMMANDS=ON \
           -DNEOFOAM_ENABLE_MPI_WITH_THREAD_SUPPORT=OFF \
