--- a/test/linearAlgebra/CMakeLists.txt
+++ b/test/linearAlgebra/CMakeLists.txt
@@ -1,7 +1,11 @@
 # SPDX-License-Identifier: Unlicense
 # SPDX-FileCopyrightText: 2024 NeoFOAM authors
 
-neofoam_unit_test(ginkgo)
 neofoam_unit_test(CSRMatrix)
 neofoam_unit_test(linearSystem)
-neofoam_unit_test(linearAlgebra)
+
+# the following tests currently require Ginkgo
+if(NEOFOAM_WITH_GINKGO)
+  neofoam_unit_test(ginkgo)
+  neofoam_unit_test(linearAlgebra)
+endif()
