turnoff sundials for adapter for now

--- a/.github/workflows/build_adapter.yaml
+++ b/.github/workflows/build_adapter.yaml
@@ -90,6 +90,7 @@ jobs:
          cmake --preset develop \
            -DNEOFOAM_DEVEL_TOOLS=OFF \
            -DNEOFOAM_BUILD_TESTS=OFF \
+           -DNEOFOAM_WITH_SUNDIALS=OFF \
            -DNEOFOAM_ENABLE_MPI_WITH_THREAD_SUPPORT=OFF
          cmake --build  --preset develop
 
