first draft of petscSolverContextCollection

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,6 +19,7 @@ target_sources(
           "core/database/document.cpp"
           "core/database/fieldCollection.cpp"
           "core/database/oldTimeCollection.cpp"
+          "core/database/petscSolverContextCollection.cpp"
           "core/dictionary.cpp"
           "core/demangle.cpp"
           "core/tokenList.cpp"
