--- a/test/core/database/CMakeLists.txt
+++ b/test/core/database/CMakeLists.txt
@@ -6,3 +6,4 @@ neofoam_unit_test(database)
 neofoam_unit_test(document)
 neofoam_unit_test(fieldCollection)
 neofoam_unit_test(oldTimeCollection)
+neofoam_unit_test(petscSolverContextCollection)
