primary dummies for AdiosCore and AdiosConfig - FIXME initial compile tests for type-erased Core and Config interfaces

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -21,6 +21,7 @@ target_sources(
           "core/database/oldTimeCollection.cpp"
           "core/dictionary.cpp"
           "core/demangle.cpp"
+          "core/io/adiosCore.cpp"
           "core/io/dataOutput.cpp"
           "core/io/staticIOComponents.cpp"
           "core/tokenList.cpp"
