--- a/test/dsl/CMakeLists.txt
+++ b/test/dsl/CMakeLists.txt
@@ -1,7 +1,7 @@
 # SPDX-License-Identifier: Unlicense
 # SPDX-FileCopyrightText: 2024 NeoFOAM authors
 
-#neofoam_unit_test(coeff)
-#neofoam_unit_test(expression)
-#neofoam_unit_test(spatialOperator)
-#neofoam_unit_test(temporalOperator)
+neofoam_unit_test(coeff)
+neofoam_unit_test(expression)
+neofoam_unit_test(spatialOperator)
+neofoam_unit_test(temporalOperator)
