works with kokkos build by petsc

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,7 @@ option(NEOFOAM_BUILD_DOC "Build documentation" OFF)
 option(NEOFOAM_WITH_ADIOS2 "Build NeoFOAM with ADIOS2 support" OFF)
 option(NEOFOAM_WITH_SUNDIALS "Build NeoFOAM with Sundials support [currently required]" ON)
 option(NEOFOAM_WITH_GINKGO "Enable using Ginkgo as linear algebra backend." ON)
+option(NEOFOAM_WITH_PETSC "Enable using Petsc as linear algebra backend." ON)
 
 option(NEOFOAM_ENABLE_SANITIZE_ADDRESS "Enable address sanitizer" OFF)
 option(NEOFOAM_ENABLE_SANITIZE_LEAK "Enable leak sanitizer" OFF)
