test with petsc solver working

--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -21,6 +21,14 @@ else()
   target_compile_definitions(NeoFOAM_public_api INTERFACE NF_WITH_GINKGO=0)
 endif()
 
+if(NEOFOAM_WITH_PETSC)
+  add_definitions(${PETSc_DEFINITIONS})
+  target_link_libraries(NeoFOAM_public_api INTERFACE ${PETSc_LIBRARIES})
+  target_compile_definitions(NeoFOAM_public_api INTERFACE NF_WITH_PETSC=1)
+else()
+  target_compile_definitions(NeoFOAM_public_api INTERFACE NF_WITH_PETSC=0)
+endif()
+
 if(${CMAKE_BUILD_TYPE} MATCHES Debug)
   target_compile_definitions(NeoFOAM_public_api INTERFACE NF_DEBUG)
 endif()
