--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,8 +37,8 @@ option(NeoN_BUILD_TESTS "Build the unit tests" OFF)
 option(NeoN_BUILD_BENCHMARKS "Build benchmarks" OFF)
 option(NeoN_BUILD_DOC "Build documentation" OFF)
 
-option(NeoN_WITH_ADIOS2 "Build NeoFOAM with ADIOS2 support" OFF)
-option(NeoN_WITH_SUNDIALS "Build NeoFOAM with Sundials support [currently required]" ON)
+option(NeoN_WITH_ADIOS2 "Build NeoN with ADIOS2 support" OFF)
+option(NeoN_WITH_SUNDIALS "Build NeoN with Sundials support [currently required]" ON)
 option(NeoN_WITH_GINKGO "Enable using Ginkgo as linear algebra backend." ON)
 
 option(NeoN_ENABLE_SANITIZE_ADDRESS "Enable address sanitizer" OFF)
@@ -93,7 +93,7 @@ include(cmake/StaticAnalyzers.cmake)
 add_library(NeoN_options INTERFACE)
 add_library(NeoN_warnings INTERFACE)
 if(NeoN_ENABLE_WARNINGS)
-  neon_set_project_warnings(neofoam_warnings ${NEOFOAM_WARNINGS_AS_ERRORS} "" "" "")
+  neon_set_project_warnings(NeoN_warnings ${NEOFOAM_WARNINGS_AS_ERRORS} "" "" "")
 endif()
 
 if(NeoN_BUILD_PCH)
@@ -121,10 +121,10 @@ if(NeoN_BUILD_BENCHMARKS)
 endif()
 
 if(NeoN_DP_SCALAR)
-  target_compile_definitions(NeoN PUBLIC NEOFOAM_DP_SCALAR=1)
+  target_compile_definitions(NeoN PUBLIC NeoN_DP_SCALAR=1)
 endif()
 if(NeoN_DP_LABEL)
-  target_compile_definitions(NeoN PUBLIC NEOFOAM_DP_LABEL=1)
+  target_compile_definitions(NeoN PUBLIC NeoN_DP_LABEL=1)
 endif()
 if(NeoN_ENABLE_MPI_SUPPORT)
   target_compile_definitions(NeoN INTERFACE NF_WITH_MPI_SUPPORT)
